# ImageableGenome

./: .gitignore  README.md  setup.cfg
data/examples/: ner_data_format_example.json  tc_data_format_example.json
doc/: api.rst  conf.py  index.rst  install.rst  intro.rst  usage.rst
models/ner/: meta.json
models/ner/ner/: cfg  moves
models/tc/: meta.json
models/tc/ner/: cfg  model
models/tc/textcat/: cfg
src/imagenome/: __init__.py  annotate.py  db.py  filter.py  ner.py  parser.py  textclass.py  translate.py  utils.py
test/: main_annotate.py  main_models.py
