[metadata]
name = imagenome
version = 0.0.1
license = GNU Affero General Public License
description = Package containing all the tools developed and used in the framework of the Imageable Genome project
author = Pablo Jané, Eduardo Jané
author_email = pablojane@hotmail.es, eduardo.jane.soler@gmail.com

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    attrs==21.4.0
    blis==0.4.1
    bokeh==2.4.2
    bounded-pool-executor==0.0.3
    catalogue==1.0.0
    certifi==2021.10.8
    charset-normalizer==2.0.12
    click==8.1.2
    cloudpickle==2.0.0
    coverage==6.3.2
    cymem==2.0.6
    distributed==2.30.1
    en-core-sci-md @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_core_sci_md-0.2.5.tar.gz
    en_ner_jnlpba_md @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.3.0/en_ner_jnlpba_md-0.3.0.tar.gz
    fsspec==2022.3.0
    HeapDict==1.0.1
    idna==3.3
    iniconfig==1.1.1
    Jinja2==3.1.1
    locket==0.2.1
    lxml==4.8.0
    MarkupSafe==2.1.1
    matplotlib==3.5.1
    msgpack==1.0.3
    murmurhash==1.0.6
    mygene==3.2.2
    mysql==0.0.3
    mysql-connector-python==8.0.27
    mysqlclient==2.0.3
    numpy==1.22.3
    packaging==21.3
    pandas==1.4.2
    partd==1.2.0
    Pillow==9.1.0
    plac==1.1.3
    pluggy==1.0.0
    preshed==3.0.6
    psutil==5.9.0
    pubmed-parser==0.3.1
    py==1.11.0
    pyarrow==7.0.0
    pyparsing==3.0.7
    pytest==7.1.1
    pytest-cov==3.0.0
    python-dateutil==2.8.2
    pytz==2022.1
    PyYAML==5.4.1
    requests==2.27.1
    six==1.16.0
    sortedcontainers==2.4.0
    spacy==2.3.4
    sphinx==4.5.0
    sphinx-rtd-theme==1.0.0
    srsly==1.0.5
    tblib==1.7.0
    thinc==7.4.1
    tomli==2.0.1
    toolz==0.11.2
    tornado==6.1
    tqdm==4.63.1
    typing_extensions==4.1.1
    Unidecode==1.3.4
    urllib3==1.26.9
    wasabi==0.9.1
    zict==2.1.0  

[options.packages.find]
where=src
